# New-Light

./: .gitignore  CODE_OF_CONDUCT.md  Documentation.txt  InviteHelp.txt  README.md  _test_runnertest_suite.py  backup.py  checks.py  config.json  designs.json  distcmds.py  distribution.json  extra.json  keep_alive.py  lists.py  main.py  other.json  pyproject.toml  quickping.json  relations.json  replit_zip_error_log.txt  startup.py  test.csproj
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.github/: dependabot.yml
.github/workflows/: deploy_to_server.yml
.upm/: store.json
Backups/: bcklog.txt  con2.json  des2.json  disconnectlogs.txt  distri2.json  log.txt  oth2.json  qp2.json  rel2.json
cogs/: adcmds.py  dailyReports.py  descmds.py  devcmds.py  distcmds.py  econcmds.py  errorhand.py  faketagcmds.py  othercmds.py  plexusSystem.py  qpcmds.py  relcmds.py  setupcmds.py  slashcmds.py  translationSystem.py
templates/: index.html  submit.html
