[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
Flask = "^2.1.2"
pytz = "^2022.1"
httpsproxy_urllib2 = "^1.0"
requests = "^2.28.1"
APScheduler = "^3.10.0"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"
flask-ipban = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"