[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.24.4"
discord = "^2.3.2"
Flask = "^2.1.2"
pytz = "^2023.4"
httpsproxy_urllib2 = "^1.0"
requests = "^2.28.1"
APScheduler = "^3.10.4"
Flask-WTF = "^1.2.1"
WTForms = "^3.0.1"
flask-ipban = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"