[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12.1,<3.14"
numpy = "^2.2.2"
discord = "^2.3.2"
Flask = "^3.1.1"
pytz = "^2025.1"
httpsproxy_urllib2 = "^1.0"
requests = "^2.32.3"
APScheduler = "^3.11.0"
Flask-WTF = "^1.2.2"
WTForms = "^3.2.1"
flask-ipban = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
